deployment/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmpl-tendenci-deployment
spec:
  selector:
    matchLabels:
      app: mmpl-tendenci-web-template
  replicas: 1
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: mmpl-tendenci-web-template
    spec: # pod spec
      containers:
        - name: mmpl-tendenci-web
          image: benjiboi214/mmpl-tendenci:cicd_test # image we pushed
          volumeMounts:
            - mountPath: "/home/tendenci/install"
              name: mmpl-tendenci-test-project
            - mountPath: "/var/log/mysite"
              name: mmpl-tendenci-test-log
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      volumes:
        - name: mmpl-tendenci-test-project
          persistentVolumeClaim:
            claimName: mmpl-tendenci-test-project
        - name: mmpl-tendenci-test-log
          persistentVolumeClaim:
            claimName: mmpl-tendenci-test-log
