deployment/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mmpl-tendenci-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: mmpl-tendenci-web-template
